--- a/style.css
+++ b/style.css
@@ -4,12 +4,93 @@
 }
 
 body {
-    background: rgb(129, 226, 230);
-    font-size: 100%;
+    background-color: #f4f4f4;
+    color:#555;
+    font-size: 16;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.6em;
+    margin: 0;
 }
 
-h1 {
+.container {
+    width: 80%;
+    margin:auto;
+    overflow:hidden;
+}
+
+#main-header {
+    background-color: aquamarine;
+    color: white;
+}
+
+#Navigation {
+    background-color: darkgrey;
+    color: white;
+}
+
+#Navigation ul {
+    padding:0;
+    list-style: none;
+}
+
+#Navigation li {
+    display: inline;
+}
+
+#Navigation a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding-right: 15px;
+}
+
+#showcase {
+    background-image: url('../WhoAmI-repository/images/showcase.jpg');
+    background-position: center right;
+    min-height: 300px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+#showcase h1 {
     font-size: 20px;
     color: lightgoldenrodyellow;
+    line-height: 1.6em;
+    padding-top: 30px;
 }
+
+#main {
+   float: left;
+   width: 70%;
+   padding:0 30px;
+   box-sizing: border-box; 
+}
+
+#sidebar {
+    float: right;
+    width: 30%;
+    background: darkgrey;
+    color: #f4f4f4;
+    padding:20px;
+    box-sizing: border-box; 
+ }
+
+ #main-footer{
+    background: #333;
+    color: white;
+    text-align: right;
+    padding: 15px;
+    margin-top: 30px;
+ }
+
+ @media(max-width:600px){
+    #main{
+        width: 100%;
+        float:none;
+    }
+
+    #sidebar{
+        width: 100%;
+        float:none;
+    }
+ }
